# simple_table

./: Cargo.toml  README.md
examples/: graph.rs  joe_table.rs  people.rs
src/: README.md  joe_table.rs  lib.rs  main.rs  simple_model.rs  simple_table.rs  spark_line.rs
