[package]
name = "simple_table"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Model driven FTLK table support."

[dependencies]
fltk = {version="1.5.21"}#,features = ["fltk-bundled"]}
fltk-theme={version="0.7.9"}
timer="0.2.0"
chrono="0.4.42"

[dev-dependencies]
rand="0.9.2"

[features]
hover=[]